# aoc2025

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/aoc2025/: __init__.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py
src/aoc2025/scripts/: aoc.py
src/aoc2025/templates/: day.py  test_day.py
tests/: __init__.py  test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py  test_day_10.py  test_day_11.py  test_day_12.py
