[project]
name = "aoc2025"
version = "0.1.0"
description = "Advent of Code 2025"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1.6",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]

[project.scripts]
aoc2025 = "aoc2025.scripts.aoc:main"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"


[tool.ruff]
line-length = 90
indent-width = 4
target-version = "py314"
exclude = ["*/templates/*.py"]

[tool.ruff.lint]
select = [
    "A",  # flake8-builtins
    "F",  # pyflakes
    "E", # pycodestyle: error
    "W",  # pycodestyle: warning
    "I",  # isort: unsorted-imports
    "RUF"  # Ruff-specific rules
]